tests/agl/rejections/type/ctor_nonbare_named_only.agl
enum E
  | Fail(x: int, y: int)
let e = Fail(1, 2)
print e
